complete UI changes and correct images and textes

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Alex/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Alex/Index.cshtml
@@ -28,10 +28,6 @@
 		</div>
 		<a class="menu" href="">Menu</a>
 	</header>
-	<nav class="mobile-nav">
-		<a class="mobile-nav-link about-link" data-ga-label="About" href="#">About</a>
-		<a class="mobile-nav-link  faq-link" data-ga-label="FAQ" href="#">FAQ</a>
-	</nav>
 </div>
 
 <section class="fixed-content fluid-width">
@@ -40,34 +36,39 @@
           
 			<div class="content-text">
 				<div class="text-slide active" data-slide="0">
-					<h2 class="js-animate-this">Bite-sized lessons to better your business</h2>
+					<h2 class="js-animate-this">Class Materials</h2>
 					<div class="js-animate-this">
-						<p>Primer is a fast, easy way to learn new business and digital marketing skills. You can take our interactive lessons whenever you have 5 minutes free.</p>
+						Tests, study guides, notes, homeworks and more!
 					</div>
 					<img src="~/Images/Alex/appIcon.png" />
 				</div>
 				<div class="text-slide" data-slide="1">
-					<h2 class="js-animate-this">There’s always more for you to learn</h2>
+					<h2 class="js-animate-this">Textbooks</h2>
 					<div class="js-animate-this">
-						<p>The business world never stops changing, and neither does Primer. We’re always adding new content and making sure we cover the most relevant topics for small business owners and marketers.</p>
+						Rent, buy or sell textbooks at the best prices
 					</div>
+				
 				</div>
 				<div class="text-slide" data-slide="2">
-					<h2 class="js-animate-this">Find the knowledge you need</h2>
-					<p class="js-animate-this">Search for the right topics for you and your business, or let us guide you through curated lesson sets. And every lesson ends with personalized next steps and a helpful recap.</p>
+					<h2 class="js-animate-this">Flashcards</h2>
+					<div class="js-animate-this">
+						Test yourself with our student-made flashcards
+					</div>				
 				</div>
 				<div class="text-slide" data-slide="3">
-					<h2 class="js-animate-this">Pick up a new<br/>skill today</h2>
-					<p class="js-animate-this">In just 5 minutes, you can learn how to measure your web analytics, engage your customers with email marketing, figure out how to put your business on the map (literally), and more.</p>
+					<h2 class="js-animate-this">Tutors</h2>
+					<div class="js-animate-this">
+						24/7 help from in-person or online experts
+					</div>
 				</div>
 				
 			</div>
 			<div class="device-frame">
 				<div class="image-slides">
-					<img class="image-slide init-image" alt="Advertising - How Remarketing Keeps Customers Coming Back" src="~/Images/Alex/slide1.png"/>
-					<img class="image-slide init-image" alt="Content - Get Customers Interested by Telling a Great Story" src="~/Images/Alex/slide1.png"/>
-					<img class="image-slide init-image" alt="Lesson Recap - How Remarketing Keeps Customers Coming Back" src="~/Images/Alex/slide1.png"/>
-					<img class="image-slide init-image" alt="Lesson Categories - Advertising Content Measurement Strategy" src="~/Images/Alex/slide1.png"/>
+					<img class="image-slide init-image" alt="Advertising - How Remarketing Keeps Customers Coming Back" src="~/Images/Alex/Docs.png"/>
+					<img class="image-slide init-image" alt="Content - Get Customers Interested by Telling a Great Story" src="~/Images/Alex/unnamed.png"/>
+					<img class="image-slide init-image" alt="Lesson Recap - How Remarketing Keeps Customers Coming Back" src="~/Images/Alex/FC.png"/>
+					<img class="image-slide init-image" alt="Lesson Categories - Advertising Content Measurement Strategy" src="~/Images/Alex/tutor.png"/>
 				</div>
 				<img class="init-image device" src="~/Images/Alex/iphone.png"/>
 			</div>
