--- a/Zbang.Cloudents.Mvc4WebRole/Content/Alex/home.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Alex/home.css
@@ -21,6 +21,8 @@ html {
 
 body {
 	margin: 0;
+	overflow: hidden;
+	height: 100%;
 }
 
 /* HTML5 display definitions
@@ -529,7 +531,7 @@ body {
 }
 
 .apple {
-	right:1%;
+	right:20px;
 	width:450px;
 }
 .spinner {
@@ -610,7 +612,7 @@ body {
 
 @media only screen and (max-width: 768px) {
 	body {
-		overflow: auto;
+		/*overflow: auto;*/
 	}
 }
 
@@ -866,7 +868,7 @@ h6 {
 	.fixed-content .device-frame {
 		position: absolute;
 		float: none;
-		padding-top: 300px;
+		padding-top: 230px;
 	}
 
 	.fixed-content .device-frame video {
@@ -876,25 +878,25 @@ h6 {
 	.fixed-content .device-frame .device {
 		margin: 0 auto;
 		display: block;
-		right: -29px;
 		width: 280px;
 	}
 
 	.fixed-content .device-frame .image-slides {
 		display: block;
 		position: absolute;
-		top: 367px;
+		top: 302px;
 		left: -7px;
-		right: 0;
-		width: 199px;
-		height: 368px;
+		right: -7px;
+		width: 225px;
+		height: 400px;
 		z-index: 10;
 		margin: 0 auto;
 		overflow: hidden;
 	}
 
 	.fixed-content .device-frame .image-slide {
-		width: 199px;
+		width: 225px;
+		height:400px;
 	}
 
 	.fixed-content .device-frame .system-overlay {
@@ -905,21 +907,39 @@ h6 {
 		width: 199px;
 	}
 }
+/*
+	Ipad
+*/
+@media only screen and (device-width: 768px) {
+	.fixed-content .device-frame {
+		position: absolute;
+		float: none;
+		padding-top: 320px;
+	}
+	.fixed-content .device-frame .image-slides {
+		top: 392px;
+	}
+	div.js-animate-this {
+		font-size:20px;
+	}
+}
 
 @media only screen and (min-width: 769px) and (max-width: 1140px) {
 	.fixed-content .device-frame .image-slides {
 		display: block;
-		width: 188px;
-		height: 334px;
-		position: absolute;
-		top: 65px;
-		left: 7px;
+		position: absolute;		
 		z-index: 10;
 		overflow: hidden;
+		top: 68px;
+		left: 26px;
+		right: 0;
+		width: 215px;
+		height: 382px;
 	}
 
 	.fixed-content .device-frame .image-slide {
-		width: 188px;
+		width: 215px;
+		height: 382px;
 	}
 
 	.fixed-content .device-frame .system-overlay {
@@ -933,6 +953,16 @@ h6 {
 }
 
 @media only screen and (min-width: 1141px) {
+	div.js-animate-this {
+		font-size:20px;
+		width:236px;
+	}
+	.content-text {
+		top:90px;
+	}
+	.text-slide:not(:first-child) {
+		top: 40px;
+	}
 	.fixed-content .device-frame .image-slides {
 		display: block;
 		position: absolute;
@@ -996,9 +1026,12 @@ h6 {
 
 
 @media only screen and (max-width: 768px) {
-	.scroll-container {
-		display: none;
-	}
+	.scroll-container { display: none; }
+
+	/*.fixed-content .device-frame { padding-top: 320px; }
+
+	.fixed-content .device-frame .image-slides { top: 392px !important; }*/
+	/*div.js-animate-this { font-size:16px;}*/
 }
 
 .scroll-section {
@@ -1087,9 +1120,145 @@ h6 {
 	}
 }
 
+
 @media only screen and (min-width: 768px) and (min-width: 769px) and (max-width: 1140px) {
 	.scroll-section .layer-object {
-		-webkit-transform: scale(0.8) translateZ(0);
+		-ms-transform: scale(0.7)  translateZ(0);
+		-webkit-transform: scale(0.7)  translateZ(0);
+		transform: scale(0.7)  translateZ(0);
+	}
+	.apple {
+		top:-80px;
+	}
+	.headphones {
+		top: 66%;
+		right: -54px;
+		-ms-transform: rotate(-16deg)!important;
+		-webkit-transform: rotate(-16deg)!important;
+		transform: rotate(-10deg) scale(0.8)!important;
+		width: 600px;
+	}
+	.spinner {
+		-ms-transform: rotate(-35deg) scale(0.7)!important;
+		-webkit-transform: rotate(-35deg) scale(0.7)!important;
+		transform: rotate(-35deg) scale(0.7)!important;
+		left: -65px;
+		top: 26%;
+	}
+
+	.sp-note {
+		transform: rotate(-20deg) scale(0.7) !important;
+		top: 55%;
+		right: -220px;
+	}
+	.fixed-content .content {
+		padding-left:25%;
+	}
+	.book {
+		/*width: 550px;
+		left: -310px;
+		top: 35%;*/
+		left:-255px;
+		transform: rotate(-10deg) scale(0.8)!important;
+	}
+	.sun-glasses {
+		/*right: 10%;
+		top: 10%;
+		width: 350px;*/
+		top:2%;
+		transform: rotate(15deg) scale(0.7)!important;
+	}
+	.folder {
+		/*top: 90%;
+		width: 850px;
+		left: -450px;*/
+		left: -450px;
+		-ms-transform: rotate(-15deg) scale(0.7) !important;
+		-webkit-transform: rotate(-15deg) scale(0.7) !important;
+		transform: rotate(-15deg) scale(0.7) !important;
+	}
+
+	.pizza {
+		/*top: 95%;
+		right: -280px;
+		width: 700px;*/
+		right: -330px;
+		top: 55%;
+		transform: rotate(15deg) scale(0.7) !important;
+	}
+	.doc {
+		/*width: 450px;
+		top: 90%;
+		right: -200px;*/
+		-ms-transform: rotate(-10deg) !important;
+		-webkit-transform: rotate(-10deg) !important;
+		transform: rotate(-10deg) scale(0.7) !important;
+	}
+	.coffee {
+		top:-160px;
+	}
+	.calc {
+		/*width: 380px;
+		top: 117%;
+		right: -2%;*/
+		top: 83%;
+		right: 0;
+		transform: rotate(10deg) scale(0.7)!important;
+	}
+	.mac {
+		transform: rotate(-20deg) scale(0.7)!important;
+	}
+	div.js-animate-this {
+		font-size:20px;
+		width:236px;
+	}
+	.text-slide:not(:first-child) {
+		top: 40px;
+	}
+}
+/*
+	Ipad pro
+*/
+@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+	.headphones {
+		top: 70%;
+		right: -145px;
+		-ms-transform: rotate(-16deg) !important;
+		-webkit-transform: rotate(-16deg) !important;
+		transform: rotate(-16deg) scale(1.2) !important;
+	}
+
+	.spinner {
+		-webkit-transform: rotate(-35deg) scale(0.7) !important;
+		transform: rotate(-35deg) scale(0.9) !important;
+		left: -66px;
+		top: 26%;
+	}
+	.fixed-content .device-frame .device {
+		width: 300px;
+	}
+	.fixed-content .device-frame .image-slides {
+		top: 76px;
+		left: 31px;
+		right: 0;
+		width: 240px;
+		height: 431px;
+	}
+	.fixed-content .device-frame .image-slide {
+		width: 240px;
+		height: 431px;
+	}
+
+	.content-text {
+		width:300px!important;
+		top: 90px!important;
+	}
+	div.js-animate-this {
+		width:236px;
+		font-size: 20px;
+	}
+	.text-slide:not(:first-child) {
+		top: 40px;
 	}
 }
 
@@ -1286,7 +1455,7 @@ h6 {
 
 @media only screen and (max-width: 1140px) {
 	.content-text h2 {
-		font-size: 36px;
+		font-size: 32px;
 		line-height: 42px;
 	}
 }
@@ -1341,24 +1510,46 @@ h6 {
 
 @media only screen and (min-width: 769px) and (max-width: 1140px) {
 	.text-slide {
-		top: -50px;
 		width: 340px;
+		margin-left:30px;
 	}
 }
 
-@media only screen and (min-width: 401px) and (max-width: 768px) {
+@media only screen and (min-width: 420px) and (max-width: 768px) {
 	.text-slide {
 		text-align: center;
 		width: 100%;
 		top: 35px;
 	}
+	.text-slide:not(:first-child) {
+		top: 70px!important;
+	}
+	.fixed-content .device-frame {
+		position: absolute;
+		float: none;
+		padding-top: 320px;
+	}
+
+		.fixed-content .device-frame .image-slides {
+			top: 392px;
+		}
+
+	div.js-animate-this {
+		font-size: 20px;
+	}
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 430px) {
 	.text-slide {
 		text-align: center;
 		width: 100%;
-		top: 0px;
+		top: 10px;
+	}
+	.content-text img {
+		-ms-transform:scale(0.8);
+		-webkit-transform:scale(0.8);
+		transform:scale(0.8);
+		margin: 10px 0 0;
 	}
 }
 
@@ -1381,7 +1572,7 @@ h6 {
 }
 
 .text-slide h2 {
-	margin-bottom: 25px;
+	margin-bottom: 10px;
 }
 
 .slide-cta {
@@ -1609,15 +1800,18 @@ h6 {
 }
 
 @media only screen and (max-width: 768px) {
+	.text-slide:not(:first-child) {
+		top:35px;
+	}
 	.header {
-		background: black;
+		background: rgba(0, 0, 0, 0.5);
 		margin-top: 0;
 		padding: 5px;
 		position: relative;
 		top: 0;
 		right: 0;
 		left: 0;
-		height: 60px;
+		height: 50px;
 		z-index: 101;
 	}
 }
@@ -1653,7 +1847,6 @@ h6 {
 .header .menu {
 	width: 24px;
 	height: 24px;
-	background: url(../img/menu@2x.png) no-repeat top center;
 	background-size: 24px 48px;
 	display: block;
 	position: absolute;
@@ -1674,7 +1867,6 @@ h6 {
 
 .mobile-nav {
 	width: 100%;
-	background: #ffffff;
 	height: 0;
 	overflow: hidden;
 	z-index: 1;
@@ -1711,9 +1903,9 @@ h6 {
 
 @media only screen and (max-width: 768px) {
 	.primer-logo {
-		-ms-transform: scale(0.8) translateX(-10px);
-		transform: scale(0.8) translateX(-10px);
-		-webkit-transform: scale(0.8) translateX(-10px);
+		-ms-transform: scale(0.7) translateX(-10px);
+		transform: scale(0.7) translateX(-10px);
+		-webkit-transform: scale(0.7) translateX(-10px);
 	}
 }
 
@@ -1774,7 +1966,7 @@ h6 {
 
 @media only screen and (min-width: 769px) and (max-width: 1140px) {
 	.footer .down-arrow {
-		left: 38%;
+		left: 47%;
 	}
 }
 
@@ -2078,9 +2270,9 @@ h6 {
 	visibility: hidden;
 }
 
-.is-mobile .home-page {
-	background: #4fd0ea;
-}
+/*.is-mobile .home-page {
+	background: radial-gradient(circle, #EF4344, #9A2121 80%);
+}*/
 
 .is-mobile .prod-video {
 	display: none;
