--- a/Zbang.Cloudents.Mvc4WebRole/Views/Alex/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Alex/Index.cshtml
@@ -13,15 +13,17 @@
 <body class="home-page fader">
 
 <div class="page-overlay-wrapper">
-<div class="fade-gradient_NOPE"></div>
+	<div class="fade-gradient_NOPE"></div>
 
 </div>
 
 <div class="header-wrapper">
 	<header class="header fluid-width mobile-full-width">
-		<a class="fader-link close-overlay" href="#" ><h1 class="spitball-logo float-left">spitball</h1></a>
+		<a class="fader-link close-overlay" href="#">
+			<h1 class="spitball-logo float-left">spitball</h1>
+		</a>
 		<div class="header-nav-links">
-			<a class="header-nav-link hover-color about-link about-header-link"  href="#">About</a>
+			<a class="header-nav-link hover-color about-link about-header-link" href="#">About</a>
 			<a class="header-nav-link hover-color faq-link faq-header-link" href="#">FAQ</a>
 		</div>
 		<a class="menu" href="">Menu</a>
@@ -39,7 +41,7 @@
 						Tests, study guides, notes, homeworks and more!
 					</div>
 					<a href="https://itunes.apple.com/us/app/id990911114?utm_source=website&utm_medium=homepage">
-					<img src="@Url.CdnContent("~/Images/Alex/appIcon.png")" />
+						<img src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
 					</a>
 				</div>
 				<div class="text-slide" data-slide="1">
@@ -81,19 +83,16 @@
 		<div class="scroll-section-content">
 			<picture>
 				<source class="layer-object apple js-load-async" srcset="@Url.CdnContent("~/Images/Alex/apple_360px.png")" media="(min-width: 769px)">
-				<img class="layer-object apple js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")" />
+				<img class="layer-object apple js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
 			</picture>
 			<picture>
 				<source class="layer-object headphones js-load-async" srcset="@Url.CdnContent("~/Images/Alex/headphone_620px.png")" media="(min-width: 769px)">
-				<img class="layer-object headphones js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")" />
+				<img class="layer-object headphones js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
 			</picture>
 			<picture>
 				<source class="layer-object spinner js-load-async" srcset="@Url.CdnContent("~/Images/Alex/spinner_small_350.png")" media="(min-width: 769px)">
-				<img class="layer-object spinner js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")" />
+				<img class="layer-object spinner js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
 			</picture>
-			@*<img class="layer-object apple initial-state init-image" src="@Url.CdnContent("~/Images/Alex/apple.png")"/>
-			<img class="layer-object headphones initial-state init-image " src="@Url.CdnContent("~/Images/Alex/headphone_620px.png")"/>
-			@*<img class="layer-object spinner initial-state init-image" src="@Url.CdnContent("~/Images/Alex/spinner_small_350.png")"/>*@
 		</div>
 
 	</section>
@@ -130,13 +129,10 @@
 				<img class="layer-object sun-glasses js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
 			</picture>
 			<picture>
-				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/appIcon.png")" media="(min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5)" />
+				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/appIcon.png")" media="(min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5)"/>
 				<source class="layer-object pizza js-load-async" srcset="@Url.CdnContent("~/Images/Alex/pizza_small_700px.png")" media="(min-width: 769px)"/>
-				<img class="layer-object pizza js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")" />
+				<img class="layer-object pizza js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
 			</picture>
-			@*<img class="layer-object folder js-load-async" src="@Url.CdnContent("~/Images/Alex/red_folder_new.png")"/>
-			<img class="layer-object sun-glasses js-load-async" src="@Url.CdnContent("~/Images/Alex/sun_glasses_small.png")"/>
-			<img class="layer-object pizza js-load-async" src="@Url.CdnContent("~/Images/Alex/pizza_small_700px.png")"/>*@
 		</div>
 
 	</section>
@@ -147,7 +143,7 @@
 
 				<source class="layer-object doc js-load-async" srcset="@Url.CdnContent("~/Images/Alex/Doc_small_45px.png")" media="(min-width: 769px)">
 
-				<img class="layer-object doc js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")" />
+				<img class="layer-object doc js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
 			</picture>
 			<picture>
 				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/appIcon.png")" media="(min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5)"/>
@@ -160,14 +156,10 @@
 				<img class="layer-object mac js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
 			</picture>
 			<picture>
-				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/appIcon.png")" media="(min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5)" />
+				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/appIcon.png")" media="(min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5)"/>
 				<source class="layer-object calc js-load-async" srcset="@Url.CdnContent("~/Images/Alex/calculator_380px.png")" media="(min-width: 769px)"/>
-				<img class="layer-object calc js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")" />
+				<img class="layer-object calc js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
 			</picture>
-			@*<img class="layer-object doc js-load-async" src="@Url.CdnContent("~/Images/Alex/doc_small_new.png")"/>
-			<img class="layer-object coffee js-load-async" src="@Url.CdnContent("~/Images/Alex/coffee2_500px.png")"/>
-			<img class="layer-object mac js-load-async" src="@Url.CdnContent("~/Images/Alex/mac_small.png")"/>
-			<img class="layer-object calc js-load-async" src="@Url.CdnContent("~/Images/Alex/calculator_new.png")"/>*@
 		</div>
 	</section>
 </section>
