--- a/Zbang.Cloudents.Mvc4WebRole/Content/Alex/home.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Alex/home.css
@@ -564,17 +564,16 @@ body {
 	transform: rotate(-10deg);
 }
 .pizza {
-	top: 46%;
+	top: 55%;
 	right: -105px;
-	-ms-transform: rotate(33deg);
-	-webkit-transform: rotate(33deg);
-	transform: rotate(33deg);
+	-ms-transform: rotate(10deg);
+	-webkit-transform: rotate(10deg);
+	transform: rotate(10deg);
 }
 
 .folder {
-	top: 45%;
-	width: 850px;
-	left: -460px;
+	top: 50%;
+	left: -355px;
 	transform: rotate(-15deg);
 }
 
@@ -2244,7 +2243,7 @@ h6 {
 
 .overlay-is-active .header-nav-link,
 .internal-page .header-nav-link {
-	color: #586971;
+	color: black;
 	background: none;
 }
 
