--- a/Zbang.Cloudents.Mvc4WebRole/Views/Alex/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Alex/Index.cshtml
@@ -82,85 +82,42 @@
 	<section class="scroll-section scroll-section-one" data-from-time="0.01" data-to-time="1.33" data-reverse-from-time="" data-reverse-to-time="">
 		<div class="scroll-section-content">
 			<picture>
-				<source class="layer-object apple js-load-async" srcset="@Url.CdnContent("~/Images/Alex/apple_360px.png")" media="(min-width: 769px)">
-				<img class="layer-object apple js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
+				<source class="layer-object apple js-load-async init-image" srcset="@Url.CdnContent("~/Images/Alex/apple_360px.png")" media="(min-width: 769px)">
+				<img class="layer-object apple js-load-async init-image" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
 			</picture>
 			<picture>
-				<source class="layer-object headphones js-load-async" srcset="@Url.CdnContent("~/Images/Alex/headphone_620px.png")" media="(min-width: 769px)">
-				<img class="layer-object headphones js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
+				<source class="layer-object headphones js-load-async init-image" srcset="@Url.CdnContent("~/Images/Alex/headphone_620px.png")" media="(min-width: 769px)">
+				<img class="layer-object headphones js-load-async init-image" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
 			</picture>
 			<picture>
-				<source class="layer-object spinner js-load-async" srcset="@Url.CdnContent("~/Images/Alex/spinner_small_350.png")" media="(min-width: 769px)">
-				<img class="layer-object spinner js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
+				<source class="layer-object spinner js-load-async init-image" srcset="@Url.CdnContent("~/Images/Alex/spinner_small_350.png")" media="(min-width: 769px)">
+				<img class="layer-object spinner js-load-async init-image" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
 			</picture>
 		</div>
 
 	</section>
 	<section class="scroll-section scroll-section-two" data-from-time="1.50" data-to-time="2.67" data-reverse-from-time="6.73" data-reverse-to-time="8.07">
 		<div class="scroll-section-content">
-			<picture>
-				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/appIcon.png")" media="(min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5)"/>
-				<source class="layer-object book js-load-async" srcset="@Url.CdnContent("~/Images/Alex/Book_small_550px.png")" media="(min-width: 769px)">
-				<img class="layer-object book js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
-			</picture>
-			<picture>
-				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/appIcon.png")" media="(min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5)"/>
-				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/coffee2_500px.png")" media="(min-width: 769px)"/>
-				<img class="layer-object coffee js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
-			</picture>
-			<picture>
-				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/appIcon.png")" media="(min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5)"/>
-				<source class="layer-object sp-note js-load-async" srcset="@Url.CdnContent("~/Images/Alex/notebook_pencil_small_750px.png")" media="(min-width: 769px)"/>
-				<img class="layer-object sp-note js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
-			</picture>
+			<img class="layer-object book js-load-async" data-image-src="@Url.CdnContent("~/Images/Alex/Book_small_550px.png")"/>
+			<img class="layer-object coffee js-load-async" data-image-src="@Url.CdnContent("~/Images/Alex/coffee2_500px.png")"/>
+			<img class="layer-object sp-note js-load-async" data-image-src="@Url.CdnContent("~/Images/Alex/notebook_pencil_small_750px.png")"/>
 		</div>
 
 	</section>
 	<section class="scroll-section scroll-section-three" data-from-time="2.83" data-to-time="4.00" data-reverse-from-time="5.40" data-reverse-to-time="6.57">
 		<div class="scroll-section-content">
 			<img class="layer-object folder js-load-async" data-image-src="@Url.CdnContent("~/Images/Alex/red_folder_850px.png")"/>
-			@*<picture>
-				<source class="layer-object folder js-load-async" srcset="@Url.CdnContent("~/Images/Alex/appIcon.png")" media="(min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5)"/>
-				<source class="layer-object folder js-load-async" srcset="@Url.CdnContent("~/Images/Alex/red_folder_850px.png")" media="(min-width: 769px)">
-				<img class="layer-object folder js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
-			</picture>*@
-			<picture>
-				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/appIcon.png")" media="(min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5)"/>
-				<source class="layer-object sun-glasses js-load-async" srcset="@Url.CdnContent("~/Images/Alex/sun_glasses_small_350px.png")" media="(min-width: 769px)"/>
-				<img class="layer-object sun-glasses js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
-			</picture>
-			<picture>
-				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/appIcon.png")" media="(min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5)"/>
-				<source class="layer-object pizza js-load-async" srcset="@Url.CdnContent("~/Images/Alex/pizza_small_700px_crop.png")" media="(min-width: 769px)"/>
-				<img class="layer-object pizza js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
-			</picture>
+			<img class="layer-object sun-glasses js-load-async" data-image-src="@Url.CdnContent("~/Images/Alex/sun_glasses_small_350px.png")"/>
+			<img class="layer-object pizza js-load-async" data-image-src="@Url.CdnContent("~/Images/Alex/pizza_small_700px_crop.png")"/>
 		</div>
 
 	</section>
 	<section class="scroll-section scroll-section-four" data-from-time="" data-to-time="" data-reverse-from-time="4.06" data-reverse-to-time="5.23">
 		<div class="scroll-section-content">
-			<picture>
-				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/appIcon.png")" media="(min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5)"/>
-
-				<source class="layer-object doc js-load-async" srcset="@Url.CdnContent("~/Images/Alex/Doc_small_45px.png")" media="(min-width: 769px)">
-
-				<img class="layer-object doc js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
-			</picture>
-			<picture>
-				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/appIcon.png")" media="(min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5)"/>
-				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/coffee2_500px.png")" media="(min-width: 769px)"/>
-				<img class="layer-object coffee js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
-			</picture>
-			<picture>
-				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/appIcon.png")" media="(min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5)"/>
-				<source class="layer-object mac js-load-async" srcset="@Url.CdnContent("~/Images/Alex/mac_small_790.png")" media="(min-width: 769px)"/>
-				<img class="layer-object mac js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
-			</picture>
-			<picture>
-				<source class="layer-object coffee js-load-async" srcset="@Url.CdnContent("~/Images/Alex/appIcon.png")" media="(min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5)"/>
-				<source class="layer-object calc js-load-async" srcset="@Url.CdnContent("~/Images/Alex/calculator_380px.png")" media="(min-width: 769px)"/>
-				<img class="layer-object calc js-load-async" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
-			</picture>
+			<img class="layer-object doc js-load-async" data-image-src="@Url.CdnContent("~/Images/Alex/Doc_small_45px.png")"/>
+			<img class="layer-object coffee js-load-async" data-image-src="@Url.CdnContent("~/Images/Alex/coffee2_500px.png")"/>
+			<img class="layer-object mac js-load-async" data-image-src="@Url.CdnContent("~/Images/Alex/mac_small_790.png")"/>
+			<img class="layer-object calc js-load-async" data-image-src="@Url.CdnContent("~/Images/Alex/calculator_380px.png")"/>
 		</div>
 	</section>
 </section>
