--- a/Zbang.Cloudents.Mvc4WebRole/Views/Alex/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Alex/Index.cshtml
@@ -83,15 +83,15 @@
 		<div class="scroll-section-content">
 			<picture>
 				<source class="layer-object apple js-load-async init-image" srcset="@Url.CdnContent("~/Images/Alex/apple_360px.png")" media="(min-width: 769px)">
-				<img class="layer-object apple js-load-async init-image" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
+				<img class="layer-object apple js-load-async init-image" />
 			</picture>
 			<picture>
 				<source class="layer-object headphones js-load-async init-image" srcset="@Url.CdnContent("~/Images/Alex/headphone_620px.png")" media="(min-width: 769px)">
-				<img class="layer-object headphones js-load-async init-image" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
+				<img class="layer-object headphones js-load-async init-image" />
 			</picture>
 			<picture>
 				<source class="layer-object spinner js-load-async init-image" srcset="@Url.CdnContent("~/Images/Alex/spinner_small_350.png")" media="(min-width: 769px)">
-				<img class="layer-object spinner js-load-async init-image" src="@Url.CdnContent("~/Images/Alex/appIcon.png")"/>
+				<img class="layer-object spinner js-load-async init-image" />
 			</picture>
 		</div>
 
