about us header const

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Alex/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Alex/Index.cshtml
@@ -23,7 +23,7 @@
 			<h1 class="spitball-logo float-left">spitball</h1>
 		</a>
 		<div class="header-nav-links">
-			<a class="header-nav-link hover-color about-link about-header-link" href="@Url.RouteUrl("Alex_ABOUT")">About</a>
+			<a class="header-nav-link hover-color about-link about-header-link" href="@Url.RouteUrl("Alex_ABOUT")">About us</a>
 			<a class="header-nav-link hover-color faq-link faq-header-link" href="@Url.RouteUrl("Alex_FAQ")">FAQ</a>
 		</div>
 		<a class="menu" href="">Menu</a>
