--- a/Zbang.Cloudents.Mvc4WebRole/Content/Alex/home.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Alex/home.rtl.css
@@ -616,7 +616,7 @@ body {
 }
 
 body.internal-page {
-	overflow: auto;
+	overflow: hidden;
 	background: radial-gradient(circle at 50% 50%, #666666, #403f3f);
 }
 
@@ -3163,8 +3163,9 @@ input:checked ~ .tab-content {
 	color: white;
 }
 .about-page .sp-note {
-	bottom: -150px;
-	left: -265px;
+	bottom: -59px;
+	left: -400px;
+	top:auto;
 	-ms-transform: rotate(20deg) scale(0.8);
 	-webkit-transform: rotate(20deg) scale(0.8);
 	transform: rotate(20deg) scale(0.8);
