--- a/Zbang.Cloudents.Mvc4WebRole/Views/Alex/About.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Alex/About.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
 	Layout = "~/Views/Alex/_LayoutStatic.cshtml";
 }
-<img class="sp-note" src="@Url.CdnContent("~/Images/Alex/notebook_pencil_small_750px.png")" />
+<img class="coffee" src="@Url.CdnContent("~/Images/Alex/coffee2_500px.png")" />
+
 <section class="main">
 	<div class="page-content">
 		<article>
